Paisa-Path.html

--- a/Paisa-Path.html
+++ b/Paisa-Path.html
@@ -142,7 +142,7 @@
         <div class="mark">PP</div>
         <div>
           <div class="title">Paisa Path</div>
-          <div class="muted small">A game to navigate financial biases in India</div>
+          <div class="muted small">A game to navigate financial biases</div>
         </div>
       </div>
     </header>
@@ -464,7 +464,7 @@ function renderScenarios(root) {
   card.className = 'card';
   const done = isDone();
   card.innerHTML = `<h2>Paisa Path ${done ? '<span class="badge">Completed</span>' : ''}</h2>
-    <div class="muted">Pick the smart choice. Learn why mistakes happen. Earn points.</div>`;
+    <div class="muted">Pick your preferred choice. Earn Points for being Rational.</div>`;
 
   SCENARIOS.forEach(s => {
     const box = document.createElement('div');
